# orp

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  CODEOWNERS  Dockerfile  Makefile  Procfile  README.md  celery-service.py  docker-compose.yml  entry.sh  local.env.example  manage.py  paas_entrypoint.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  vite.config.js  webpack.config.js
.copilot/: config.yml  image_build_run.sh
.github/workflows/: code_quality.yml
app/cache/: apps.py  legislation.py  manage_cache.py  public_gateway.py
app/core/: apps.py  cookies.py  views.py
app/core/templates/: cookies.html  privacy_notice.html
app/core/templatetags/: cookie_tags.py
app/search/: apps.py  config.py  views.py
app/search/migrations/: 0001_initial.py
app/search/templates/: django-fbr.html  document.html  intro.html  react-fbr.html
app/search/tests/: test_search.py
app/search/utils/: date.py  documents.py  paginate.py  search.py  terms.py
app/templates/: base.html  cookie_banner.html  service_problem.html
celery_worker/: tasks.py
fbr/: __init__.py  celery_app.py  context_processors.py  manage.py  settings.py  setup.py  tasks.py  tempcache.py  urls.py  wsgi.py
fbr/cache/: construction_legislation.py  legislation.py  manage_cache.py  public_gateway.py  tasks.py
fbr/config/: asgi.py  celery.py  tasks.py  urls.py  wsgi.py
fbr/config/settings/: base.py  live.py  local.py
fbr/core/: apps.py  cookies.py  forms.py  healthcheck.py  views.py
fbr/core/templates/: home.html
fbr/management/commands/: setup_periodic_task.py
fbr/orp_search/: apps.py
fbr/orp_search/templates/: intro.html  react-orp.html
fbr/search/: apps.py  legislation.py  public_gateway.py  views.py
fbr/templates/: cookie_banner.html
front_end/: index.html
front_end/js/: application.js
front_end/src/: index.jsx
front_end/styles/: header.scss  styles.scss
front_end/stylesheets/: application.scss  filters.scss  helpers.scss  inset_text.scss  report.scss  search.scss  skeleton.scss
local_deployment/: Dockerfile  entry.sh
orp/config/: asgi.py  urls.py  wsgi.py
orp/core/: admin.py  apps.py  cookies.py  dbt_data_api.py  forms.py  views.py
orp/orp_search/: apps.py  config.py  construction-data.csv  construction_legislation.py  construction_legislation.xlsx  dummy_data.py  export_csv.py  legislation.py  models.py  public_gateway.py  search.py  views.py
orp/templates/: base.html  cookie_banner.html
react_front_end/src/: App.js  index.js
(+54 files in other folders)
